--- a/LoadNames.ipynb
+++ b/LoadNames.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
     "Scene = []\n",
     "Extension = []\n",
     "for inds,name in enumerate(files_names):\n",
-    "    brk_name = name.split('-')\n",
+    "    brk_name = name.split('_')\n",
     "    Film.append(brk_name[0])\n",
     "    References.append(brk_name[2][:-4])\n",
     "    Scene.append(brk_name[1])\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,29 +78,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"1-scene1-C'est peut être ça que vous cherchez.mp3\""
+       "\"1_scene1_C'est peut être ça que vous cherchez.mp3\""
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "'.'.join(('-'.join(ref_list.iloc[4].name[:-1]),ref_list.iloc[4].name[-1]))\n",
+    "'.'.join(('_'.join(ref_list.iloc[4].name[:-1]),ref_list.iloc[4].name[-1]))\n",
     "\n",
-    "'-'.join(ref_list.iloc[4].name[:-1]) + \".mp3\" # Si on a que des mp3"
+    "'_'.join(ref_list.iloc[4].name[:-1]) + \".mp3\" # Si on a que des mp3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +215,7 @@
        "[73 rows x 0 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
     "import playsound #Bug sur certain\n",
     "\n",
     "for i in range(0,ref_list.shape[0]): \n",
-    "    path = \"Datas/Oss1/\"+ '-'.join(ref_list.iloc[i].name[:-1]) + \".mp3\"\n",
+    "    path = \"Datas/Oss1/\"+ '_'.join(ref_list.iloc[i].name[:-1]) + \".mp3\"\n",
     "    playsound.playsound(path)\n",
     "    print(i)"
    ]
