--- a/LoadNames.ipynb
+++ b/LoadNames.ipynb
@@ -153,7 +153,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"10\" valign=\"top\">1</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">1</th>\n",
        "      <th rowspan=\"5\" valign=\"top\">scene1</th>\n",
        "      <th>Ah oui exactement comme moi</th>\n",
        "      <th>mp3</th>\n",
@@ -178,41 +178,42 @@
        "      <th>...</th>\n",
        "      <th>...</th>\n",
        "      <th>...</th>\n",
+       "      <th>...</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th rowspan=\"4\" valign=\"top\">scene5</th>\n",
-       "      <th>Oh, c'est le moins qu'on puisse dire</th>\n",
+       "      <th rowspan=\"5\" valign=\"top\">OSS2</th>\n",
+       "      <th rowspan=\"4\" valign=\"top\">Scene9</th>\n",
+       "      <th>On en reparlera quand faudra porter qqc de lourd</th>\n",
        "      <th>mp3</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Oui non mais enfin c'est joli, hein, c'est joli quand même</th>\n",
+       "      <th>Oui! Enfin le meilleur c'est pas a moi de le dire, et vous savez comme je le dis souvent</th>\n",
        "      <th>mp3</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Votre français est irréprochable Larmina</th>\n",
+       "      <th>Rechercher un nazi avec des juifs, quelle drole d'idée</th>\n",
        "      <th>mp3</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Vu les merveilleuses richesses de ce pays, on comprend que les étrangers aient envie de l'occuper</th>\n",
+       "      <th>Vous etes la secretaire de qui alors</th>\n",
        "      <th>mp3</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <th>scene1</th>\n",
-       "      <th>AAAA</th>\n",
+       "      <th>Scene</th>\n",
+       "      <th>Bonjour Fagnol</th>\n",
        "      <th>mp3</th>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>73 rows × 0 columns</p>\n",
+       "<p>221 rows × 0 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "Empty DataFrame\n",
        "Columns: []\n",
-       "Index: [(1, scene1, Ah oui exactement comme moi, mp3), (1, scene1, Ah...Sinon, mp3), (1, scene1, Alors allons redresser cet avion, mp3), (1, scene1, Auf Wierdersehen, er colonel, mp3), (1, scene1, C'est peut être ça que vous cherchez, mp3), (1, scene1, ca va jack, mp3), (1, scene1, Ce qu il y a dans la serviette, les plans du v2, mp3), (1, scene1, Et merci d'avoir choisi oss117 airways, mp3), (1, scene1, Il y tout de même quelque chose qui me turlupine jack, mp3), (1, scene1, OSS117, pour vous servir, mp3), (1, scene1, rire1, mp3), (1, scene2, A votre service, mp3), (1, scene2, Baillonnée, mp3), (1, scene2, commencons tranquillement voulez vous, avant de corser les choses, mp3), (1, scene2, Je le sais ça hein, mp3), (1, scene2, Je n'ai pas aimé le truc sur les vaches, mp3), (1, scene2, Journaliste libanaise en poste à Rome, mp3), (1, scene2, Mais la princesse Al'Tarouk, la nièce du souverain d'Egypte Farouk, mp3), (1, scene2, Moi aussi je sais qui vous êtes, mp3), (1, scene2, On verra cela, mp3), (1, scene2, Oui mais dépéchons nous je n'ai que quelques heures, mp3), (1, scene2, Pas envie..., mp3), (1, scene2, Quoi qu'il en soit princesse, mp3), (1, scene2, Tiens donc, mp3), (1, scene2, Vous avez quelque chose là dont j'ai un grand besoin, mp3), (1, scene2, Vous n'êtes pas Jamila Narubi, mp3), (1, scene2, Vous êtes bien grossière pour une femme dont le tonton est pharaon, mp3), (1, scene3, Arabo, mp3), (1, scene3, Comment est votre blanquette, mp3), (1, scene3, Comptez sur moi, mp3), (1, scene3, Deux blanquettes et un pot de brouille, mp3), (1, scene3, Jack1, mp3), (1, scene3, Jack2, mp3), (1, scene3, Jack3, mp3), (1, scene3, Joli cocktail, mp3), (1, scene3, Le président Coty, mp3), (1, scene3, Les, mp3), (1, scene3, On me dit le plus grand bien de vos harengs pomme à l'huile, mp3), (1, scene3, Pas de problèmes, mp3), (1, scene3, Procédure habituelle, mp3), (1, scene3, Qu'est ce donc, mp3), (1, scene3, Que ce passe t il là bas, mp3), (1, scene3, Voici ce que vous vouliez, mp3), (1, scene4, Avec du veau, mp3), (1, scene4, Bon, mp3), (1, scene4, Comment est votre blanquette, mp3), (1, scene4, Elle est bonne, mp3), (1, scene4, Hmm, bonne journée monsieur, mp3), (1, scene4, Hubert Bonnisseur de la Batte, mp3), (1, scene4, Il n'y a rien à base de veau avec des champignons, des pomme de terres, mp3), (1, scene4, Le patron vous en apportera un ramequin, vous vous ferez une idée, mp3), (1, scene4, Les plats, à base de viande, sont ils de bonne qualité, mp3), (1, scene4, Mais ici je suis Lucien Bramard, mp3), (1, scene4, Quel nom compliqué, mp3), (1, scene5, Bramard, Lucien Bramard, mp3), (1, scene5, Ceci dit c'est sympatique au fond, mp3), (1, scene5, Des millions. Ahah, des millions, vous êtes charmantes mais vous voyez ce que ça fait déjà un million Larmina, mp3), (1, scene5, Dommage quelle soit aussi sale, mp3), (1, scene5, Et de s'y éterniser, mp3), (1, scene5, Et que je trimballe des poules, que je te trimballe des pastèques, mp3), (1, scene5, Hmm, je sais j'en rage, mp3), (1, scene5, Je n'arrive pas à aimer cela, mp3), (1, scene5, Je vais réessayer je vous le promets, mp3), (1, scene5, Jolie voiture, mp3), (1, scene5, Le problème avec l'arabe, c'est que ce n'est pas facilement lisible, mp3), (1, scene5, Même au niveau du son hein, mp3), (1, scene5, Ne pas fumer me tue, mp3), (1, scene5, Non, merci je ne fume pas, mp3), (1, scene5, Oh, c'est le moins qu'on puisse dire, mp3), (1, scene5, Oui non mais enfin c'est joli, hein, c'est joli quand même, mp3), (1, scene5, Votre français est irréprochable Larmina, mp3), (1, scene5, Vu les merveilleuses richesses de ce pays, on comprend que les étrangers aient envie de l'occuper, mp3), (2, scene1, AAAA, mp3)]\n",
+       "Index: [(1, scene1, Ah oui exactement comme moi, mp3), (1, scene1, Ah...Sinon, mp3), (1, scene1, Alors allons redresser cet avion, mp3), (1, scene1, Auf Wierdersehen, er colonel, mp3), (1, scene1, C'est peut être ça que vous cherchez, mp3), (1, scene1, ca va jack, mp3), (1, scene1, Ce qu il y a dans la serviette, les plans du v2, mp3), (1, scene1, Et merci d'avoir choisi oss117 airways, mp3), (1, scene1, Il y tout de même quelque chose qui me turlupine jack, mp3), (1, scene1, OSS117, pour vous servir, mp3), (1, scene1, rire1, mp3), (1, scene2, A votre service, mp3), (1, scene2, Baillonnée, mp3), (1, scene2, commencons tranquillement voulez vous, avant de corser les choses, mp3), (1, scene2, Je le sais ça hein, mp3), (1, scene2, Je n'ai pas aimé le truc sur les vaches, mp3), (1, scene2, Journaliste libanaise en poste à Rome, mp3), (1, scene2, Mais la princesse Al'Tarouk, la nièce du souverain d'Egypte Farouk, mp3), (1, scene2, Moi aussi je sais qui vous êtes, mp3), (1, scene2, On verra cela, mp3), (1, scene2, Oui mais dépéchons nous je n'ai que quelques heures, mp3), (1, scene2, Pas envie..., mp3), (1, scene2, Quoi qu'il en soit princesse, mp3), (1, scene2, Tiens donc, mp3), (1, scene2, Vous avez quelque chose là dont j'ai un grand besoin, mp3), (1, scene2, Vous n'êtes pas Jamila Narubi, mp3), (1, scene2, Vous êtes bien grossière pour une femme dont le tonton est pharaon, mp3), (1, scene3, Arabo, mp3), (1, scene3, Comment est votre blanquette, mp3), (1, scene3, Comptez sur moi, mp3), (1, scene3, Deux blanquettes et un pot de brouille, mp3), (1, scene3, Jack1, mp3), (1, scene3, Jack2, mp3), (1, scene3, Jack3, mp3), (1, scene3, Joli cocktail, mp3), (1, scene3, Le président Coty, mp3), (1, scene3, Les, mp3), (1, scene3, On me dit le plus grand bien de vos harengs pomme à l'huile, mp3), (1, scene3, Pas de problèmes, mp3), (1, scene3, Procédure habituelle, mp3), (1, scene3, Qu'est ce donc, mp3), (1, scene3, Que ce passe t il là bas, mp3), (1, scene3, Voici ce que vous vouliez, mp3), (1, scene4, Avec du veau, mp3), (1, scene4, Bon, mp3), (1, scene4, Comment est votre blanquette, mp3), (1, scene4, Elle est bonne, mp3), (1, scene4, Hmm, bonne journée monsieur, mp3), (1, scene4, Hubert Bonnisseur de la Batte, mp3), (1, scene4, Il n'y a rien à base de veau avec des champignons, des pomme de terres, mp3), (1, scene4, Le patron vous en apportera un ramequin, vous vous ferez une idée, mp3), (1, scene4, Les plats, à base de viande, sont ils de bonne qualité, mp3), (1, scene4, Mais ici je suis Lucien Bramard, mp3), (1, scene4, Quel nom compliqué, mp3), (1, scene5, Bramard, Lucien Bramard, mp3), (1, scene5, Ceci dit c'est sympatique au fond, mp3), (1, scene5, Des millions. Ahah, des millions, vous êtes charmantes mais vous voyez ce que ça fait déjà un million Larmina, mp3), (1, scene5, Dommage quelle soit aussi sale, mp3), (1, scene5, Et de s'y éterniser, mp3), (1, scene5, Et que je trimballe des poules, que je te trimballe des pastèques, mp3), (1, scene5, Hmm, je sais j'en rage, mp3), (1, scene5, Je n'arrive pas à aimer cela, mp3), (1, scene5, Je vais réessayer je vous le promets, mp3), (1, scene5, Jolie voiture, mp3), (1, scene5, Le problème avec l'arabe, c'est que ce n'est pas facilement lisible, mp3), (1, scene5, Même au niveau du son hein, mp3), (1, scene5, Ne pas fumer me tue, mp3), (1, scene5, Non, merci je ne fume pas, mp3), (1, scene5, Oh, c'est le moins qu'on puisse dire, mp3), (1, scene5, Oui non mais enfin c'est joli, hein, c'est joli quand même, mp3), (1, scene5, Votre français est irréprochable Larmina, mp3), (1, scene5, Vu les merveilleuses richesses de ce pays, on comprend que les étrangers aient envie de l'occuper, mp3), (OSS2, Scene10,  Ah ça ! Quelle histoire ça aussi !, mp3), (OSS2, Scene10, Bien sur !, mp3), (OSS2, Scene10, Hummm ! Qui sont , mp3), (OSS2, Scene10, J'comprends, mp3), (OSS2, Scene10, Je ne crois pas nan ! C'est l'argent de la France et je ne peux pas me permttre de le laisser à n'importe qui !, mp3), (OSS2, Scene10, Les juifs et l'argent, mp3), (OSS2, Scene10, OUI ! , mp3), (OSS2, Scene10, Épatant !, mp3), (OSS2, Scene11, Ah bah voila ! C'est vrai que vous avez surement une petite part de responsabilité !, mp3), (OSS2, Scene11, Belle soirée n'est ce pas , mp3), (OSS2, Scene11, Bonne nuit les gars !, mp3), (OSS2, Scene11, Bonne nuit à vous aussi !, mp3), (OSS2, Scene11, Bonsoir ..., mp3), (OSS2, Scene11, Désolé pour tout à l'heure j'ai été affreusement maladroit, mais je saurais me faire pardonner !, mp3), (OSS2, Scene11, Je me rend bien compte que j'ai été ..., mp3), (OSS2, Scene11, Merci mais je ne me servirai que de la brosse à dents, mp3), (OSS2, Scene11, Merci pour la brosse à dents Dolores !, mp3), (OSS2, Scene11, Non ! Je pensais plutôt maladroit !, mp3), (OSS2, Scene11, Oh Pardon !, mp3), (OSS2, Scene12, Ah bah non c'est dommage! Venez voir l''hotel au moins !, mp3), (OSS2, Scene12, Comme vous voudrez !, mp3), (OSS2, Scene12, À tantot alors !, mp3), (OSS2, Scene12, Écoutez c'est ridicule ! On s'y mettra cette apres midi on mettra un bon coup et puis voila !, mp3), (OSS2, Scene13, C'est qu'ils sont recalcitrants ces faces de cuech !, mp3), (OSS2, Scene13, Ces tranches de Pamplemousse, mp3), (OSS2, Scene13, J'èspere que vous n'etes pas trop desapointés, je n'ai pas pu tuer tout ces Chintoks ! J'en suis désolé !, mp3), (OSS2, Scene13, Je sais que vous detestez tout ces bouffeurs de riz, mp3), (OSS2, Scene13, Je suis ravi de vous revoir ! Je n'ai pas eu l'occasion de vous remercier pour cette mission à Gstaad !, mp3), ...]\n",
        "\n",
-       "[73 rows x 0 columns]"
+       "[221 rows x 0 columns]"
       ]
      },
      "execution_count": 6,
