--- a/Datas/Oss2/Untitled.ipynb
+++ b/Datas/Oss2/Untitled.ipynb
@@ -13,15 +13,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "for file in os.listdir(os.getcwd()):\n",
+    "    os.rename(file,file.replace(\"?\",\"\"))\n",
     "    \n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
